--- a/jobwatch/index.html
+++ b/jobwatch/index.html
@@ -7,6 +7,7 @@
     <title>Jobwatch</title>
   </head>
   <body style="margin: 0;">
+    <custom-style><style include="lumo-color"></style></custom-style>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
