--- a/litimer/index.html
+++ b/litimer/index.html
@@ -8,8 +8,10 @@
     <script type="module" src="/src/my-element.ts"></script>
   </head>
   <body>
-    <my-element>
+    <my-element name=Vite count=10>
       <p>This is child content</p>
+      <p slot=before>Here comes the counter button</p>
+      <p>Another default slot content</p>
     </my-element>
   </body>
 </html>
