--- a/litimer/index.html
+++ b/litimer/index.html
@@ -14,7 +14,12 @@
       <p>Another default slot content</p>
       <p><my-timer><span slot="after"> millis</span><b>A timer ==></b> <my-timer slot=after>Another timer:</my-timer> </my-timer></p>
       <my-timer></my-timer>
+      <p>This is child content</p>
+      <p slot=before>Here comes the counter button</p>
+      <p>Another default slot content</p>
+      <p><my-timer><span slot="after"> millis</span><b>A timer ==></b> <my-timer slot=after>Another timer:</my-timer> </my-timer></p>
+      <my-timer></my-timer>
     </my-element>
-    
+    <my-timer></my-timer>
   </body>
 </html>
